rewrite awkward copy

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Picture-based question -->
         <div class="questionTwo">
           <div class="form-group">
-            <h1>2. What activity sounds more appealing to you?</h1>
+            <h1>2. What activity sounds most appealing to you?</h1>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="question2" id="nightmare-answer" value="2A" checked>
               <label class="form-check-label" for="nightmare-answer">
@@ -71,9 +71,9 @@
         <hr />
         <!-- Range for triggerometer-->
         <div class="questionThree">
-          <h1>3. Rate your current triggered-happy condition!</h1>
+          <h1>3. Rate how triggered you feel at this very moment:</h1>
           <label for="firstLabel"><div class="left-label"><em>"I can't be in the same room <br>as pizza, don't talk to me!"</em></div></label>
-          <label for="secondLabel" id="q3RightLabel"><div class="right-label"><em>"Talk to me about sex, politics,<br> death, and other people's money!"</em></div></label>
+          <label for="secondLabel" id="q3RightLabel"><div class="right-label"><em>"Give me the skinny on sex, politics,<br> death, and other people's money!"</em></div></label>
           <input type="range" class="custom-range" min="0" max="5" step="1" id="question3">
           <hr />
           <!-- <div class="float-left">
@@ -85,14 +85,14 @@
           <select class="custom-select" id="question4">
             <option selected>Choose from the following:</option>
             <option value="4A">I know what others want, need, and desire. People seek high and low for my pearls of wisdom.</option>
-            <option value="4B">I read horoscopes. They make me feel toilet competent. </option>
-            <option value="4C">Please, I'm desperate! Teach me how to breathe. I need help; regularly I feel desperate.</option>
+            <option value="4B">I read horoscopes. I know what's right with the multiverse. </option>
+            <option value="4C">Please, I'm desperate! Teach me how to breathe.</option>
           </select>
         </div>
       </div>
       <hr />
       <div class="questionFive">
-        <h1>5. Who makes your heart beat? Who gives you purpose, drive, motivation? A hero?</h1>
+        <h1>5. Which hero makes your heart beat? Who gives you inspiration, drive, spunk, motivation? </h1>
         <div class="row">
           <div class="col-md-3">
             <div class="form-check">
@@ -137,7 +137,7 @@
             <option value="6A">Alternative facts</option>
             <option value="6B">Evidence-based facts</option>
             <option value="6C">Opinions masquerading as facts</option>
-            <option value="6D">I love my fax</option>
+            <option value="6D">I love to fax</option>
           </select>
         </div>
       </div>
@@ -160,7 +160,7 @@
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck3" value="7C">
             <label class="custom-control-label" for="customCheck3"><div class="bold">Space Force</div>
-              <p>This is not even funny, it's just annoying. Don't.</p>
+              <p>A proposed sixth branch of the United States Armed Forces under the current administration- intended to have control over military operations in outer space, but more likely a waste of resources.</p>
             </label>
           </div>
           <div class="custom-control custom-checkbox">
