--- a/index.html
+++ b/index.html
@@ -663,7 +663,9 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ridiculousHistory">
       Ridiculous History
     </button>
+    <div id="myModal">
 
+    </div>
 
 
 
