revert to working radio buttons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="questionOne">
           <div class="form-group">
             <h1>1. How do you describe the world?</h1>
-            <div class="custom-control custom-radio">
+            <div class="form-check">
               <input class="form-check-input" type="radio" name="question1" id="round-answer" value="1A" checked>
-              <label class="custom-control-label" for="round">
+              <label class="form-check-label" for="round">
                 Incontrovertibly round
               </label>
             </div>
