--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Chivo:900" rel="stylesheet">
-  <title>Pod Match</title>
+  <title>PodCaster</title>
 </head>
 <body>
   <div class="header">PodCaster</div>
@@ -218,4 +218,3 @@
 </body>
 </div>
 </html>
-<!--hey-->
