--- a/html/home.html
+++ b/html/home.html
@@ -6,8 +6,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js"></script>
+    <link href="../css/styles.css" rel="stylesheet" type="text/css">
+    <link href="../css/home.css" rel="stylesheet" type="text/css">
+    <script src="../js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo:900" rel="stylesheet">
@@ -17,11 +18,11 @@
     <div class="home-header">PodCaster</div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <p class= "home-links"><a href="index.html">Find Your Podcast</a></p>
+        <div class="col-sm-6">
+          <p class= "home-links1"><a href="index.html">Find Your Podcast</a></p>
         </div>
-        <div class="col-md-6">
-          <p class= "home-links"><a href="grid.html">Explore Podcasts</a></p>
+        <div class="col-sm-6">
+          <p class= "home-links2"><a href="grid.html">Explore Podcasts</a></p>
         </div>
       </div>
   </body>
