add linkability between grid and homepage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>PodCaster</title>
   </head>
   <body>
-    <div class="header">PodCaster</div>
+    <a href="html/home.html"><div class="header">PodCaster</div></a>
     <div class="container">
       <div class="foreground">
         <form id="user-input">
